# THz_TDS_UoB

./: .gitignore  README.md  config.yaml  pyproject.toml
folder_struct/: thickness.txt
folder_struct/RADIX_2.8_6/MENLO_UoB/Collimated/: .tds_filter_gui_defaults.json
folder_struct/RADIX_2.8_6/MENLO_UoB/Collimated/pulse/: .tds_gui_defaults.json  RADIX_2.8_6_MENLO_UoB_1.txt  RADIX_2.8_6_MENLO_UoB_2.txt  RADIX_2.8_6_MENLO_UoB_3.txt  RADIX_2.8_6_MENLO_UoB_4.txt  RADIX_2.8_6_MENLO_UoB_5.txt  RADIX_2.8_6_MENLO_UoB_6.txt
src/: config.py  tds_extraction_CLI.py  tds_extraction_core.py  tds_fft_processor.py  tds_preprocessing_CLI.py  tds_processing_GUI.py  utils.py
